[package]
name = "tigerust"
version = "0.1.0"
authors = ["ielvert-menlo <ielvert@menlo-technologies.com>", "QPotato <federicobadaloni@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
lalrpop-util = "0.17.1"
regex = "1.2.0"
nanoid = "0.2.0"
snowflake = { version = "1.2", features = ["serde_support"] }
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
pathfinding = "1.1.12"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }
serde = { version = "^1.0.59", features = ["rc"] }
serde_derive = "^1.0.59"
serde_json = "^1.0"
parity-wasm = "0.41.0"

[dependencies.wasm-bindgen]
version = "=0.2.34"
features = ["serde-serialize"]

[dev-dependencies]
wasm-bindgen-test = "0.2"


[build-dependencies]
lalrpop = "0.17.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
